# prune-lang

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: test_benches.rs
examples/: long_fail.nrm
examples/append/: good_prog.nrm
examples/arith/: binary_arith.pr  binary_vec.pr  ternary_arith.pr  unary_arith.pr
examples/avl_tree/: bad_prog.nrm
examples/basic/: concat_backward.pr  concat_forward.pr  reverse_backward.pr  reverse_forward.pr
examples/features/: polymorphism.pr  polymorphism_fail.pr  smt_sat.pr  smt_unsat.pr
examples/other/: fermat_n3.pr  pythagorean.pr
examples/reverse/: bad_prog.nrm
examples/sat/: append_bad.nrm  append_bad.pr  avl_tree_bad.nrm  avl_tree_bad.pr  double_reverse_bad.nrm  double_reverse_bad.pr  reverse_length_bad.nrm  reverse_length_bad.pr  tree_insert_bad.nrm  tree_insert_bad.pr
examples/sym_exec/: avl_tree_bad.pr  avl_tree_good.pr  tree_insert_bad.pr  tree_insert_good.pr
examples/sym_exec_bad/: append_bad.pr  avl_tree_bad.pr  avl_tree_opt_bad.pr  double_reverse_bad.pr  reverse_length_bad.pr  tree_insert_bad.pr
examples/sym_exec_good/: append_good.pr  avl_tree_good.pr  avl_tree_opt_good.pr  double_reverse_good.pr  reverse_length_good.pr  tree_insert_good.pr
examples/test_gen/: avl_tree_arith_gen.pr  avl_tree_gen.pr  avl_tree_opt_gen.pr  lambda_free_gen.pr  mini_lang_gen.pr  stlc_term_gen.pr
examples/tree_insert/: bad_prog.nrm  good_prog.nrm
examples/unsat/: append.pr  avl_tree.nrm  avl_tree.pr  double_reverse.nrm  (+7 more)
src/: lib.rs  main.rs
tests/: test_examples.rs
(+101 files in other folders)
