[package]
name = "norem-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.21.3"
logos = "0.15.0"
snailquote = "0.3.1"
lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
itertools = "0.14.0"
rand = "0.9.0"
easy-smt = "0.3.1"

[build-dependencies]
lalrpop = "0.22.1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "test_benches"
harness = false
